Fix homepage width on mobile

--- a/src/css/default.scss
+++ b/src/css/default.scss
@@ -142,7 +142,7 @@ a:hover {
 
 div.home-body {
     margin: 0 auto;
-    width: 450px;
+    max-width: 450px;
     text-align-last: center;
 }
 
